--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
+                     <p> I have huge experience about front-end development, web design, PSD to HTML. I'm also expert on Photoshop Editing. I  am highly skilled on HTML5, CSS3, JavaScript, jQuery, PhotoShop. I've experienced in responsive design which is required for supporting your site on any device like mobiles, tablets, laptops & any kind of computer. I hope my experience is enough to fulfill your dream..
+
+</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
